refactor code and styled components

--- a/src/components/Elem/Elem.sass
+++ b/src/components/Elem/Elem.sass
@@ -1,7 +1,15 @@
 .Elem
   display: flex
   justify-content: center
-  margin-bottom: 10px
+  width: 100%
+  padding: 10px 0
+  border-bottom: 1px solid rgba(255, 255, 255, 0.7)
+
+  &:last-child
+    border-bottom: none
 
 .Elem__Name
   margin-right: 10px
+
+.Elem__Name, .Elem__Age
+    color: #ffffff
