--- a/src/App.sass
+++ b/src/App.sass
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap')
+
 body
   margin: 0
 
@@ -8,4 +10,7 @@ body
   height: 100vh
   padding-top: 100px
   box-sizing: border-box
-  background-color: rgba(130,121,51, 0.1)
+  background-image: url("assets/images/bg.jpg")
+  background-position: center
+  background-size: cover
+  background-repeat: no-repeat
