--- a/src/components/List/List.sass
+++ b/src/components/List/List.sass
@@ -2,3 +2,8 @@
   display: flex
   flex-direction: column
   align-items: center
+  box-sizing: border-box
+  width: 300px
+  margin-bottom: 10px
+  border: 1px solid rgba(255, 255, 255, 0.7)
+  border-radius: 5px
