--- a/src/components/Form/Form.sass
+++ b/src/components/Form/Form.sass
@@ -28,6 +28,7 @@
   color: rgba(255, 0, 0, 0.8)
   background-color: rgba(255, 255, 255, 0.7)
   font-family: 'Montserrat', sans-serif
+  outline: none
 
 
 
