--- a/src/components/Elem/Elem.sass
+++ b/src/components/Elem/Elem.sass
@@ -1,12 +1,26 @@
 .Elem
   display: flex
-  justify-content: center
+  justify-content: space-between
   width: 100%
-  padding: 10px 0
+  box-sizing: border-box
+  padding: 10px 20px
   border-bottom: 1px solid rgba(255, 255, 255, 0.7)
 
   &:last-child
     border-bottom: none
+
+.Elem__Avatar
+  width: 30px
+  height: 30px
+
+  img
+    width: 100%
+    height: 100%
+    border-radius: 50%
+
+.Elem__Info
+  display: flex
+  align-items: center
 
 .Elem__Name
   margin-right: 10px
