--- a/src/components/Form/Form.sass
+++ b/src/components/Form/Form.sass
@@ -9,6 +9,9 @@
   width: 300px
   padding: 0 15px
 
+  .fileContainer
+    background-color: rgba(255, 255, 255, 0.7)
+
 .Form__Input
   width: 100%
   height: 30px
