--- a/src/components/Form/Form.sass
+++ b/src/components/Form/Form.sass
@@ -1,7 +1,9 @@
 .Form
   display: flex
+  align-items: center
   justify-content: center
   width: 100%
+  height: 100%
 
 .Form__Wrap
   display: flex
@@ -12,6 +14,13 @@
   .fileContainer
     background-color: rgba(255, 255, 255, 0.7)
 
+.Form__Title
+  width: 100%
+  border-bottom:
+  color: rgba(255, 255, 255, 0.9)
+  font-family: 'Montserrat', sans-serif
+  text-align: center
+
 .Form__Input
   width: 100%
   height: 30px
@@ -21,15 +30,19 @@
   margin-bottom: 10px
   padding: 0 0 0 20px
   background-color: transparent
+  color: #ffffff
   font-family: 'Montserrat', sans-serif
+
+  &::placeholder
+    color: #ffffff
 
 .Form__Submit
   width: 100%
   height: 30px
   border: 1px solid rgba(255, 0, 0, 0.4)
   border-radius: 5px
-  color: rgba(255, 0, 0, 0.8)
-  background-color: rgba(255, 255, 255, 0.7)
+  color: rgba(255, 255, 255, 0.9)
+  background-color: rgba(255, 0, 0, 0.4)
   font-family: 'Montserrat', sans-serif
   outline: none
 
