--- a/src/components/List/List.sass
+++ b/src/components/List/List.sass
@@ -3,7 +3,35 @@
   flex-direction: column
   align-items: center
   box-sizing: border-box
+  overflow: hidden
+  overflow-y: scroll
   width: 300px
+  height: 685px
   margin-bottom: 10px
   border: 1px solid rgba(255, 255, 255, 0.7)
   border-radius: 5px
+  background-color: rgba(0, 0, 0, 0.2)
+
+  &::-webkit-scrollbar-track
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3)
+    background-color: #F5F5F5
+
+
+  &::-webkit-scrollbar
+    width: 6px
+    background-color: #F5F5F5
+
+
+  &::-webkit-scrollbar-thumb
+    background-color: #108890
+    background-image: -webkit-linear-gradient(90deg,rgba(255, 255, 255, .2) 25%,transparent 25%, transparent 50%,rgba(255, 255, 255, .2) 50%,rgba(255, 255, 255, .2) 75%,transparent 75%,transparent)
+
+.List__Title
+  width: 100%
+  border-bottom: 1px solid rgba(255, 255, 255, 0.7)
+  margin-bottom: 0
+  padding-bottom: 20px
+  color: rgba(255, 255, 255, 0.9)
+  font-family: 'Montserrat', sans-serif
+  text-align: center
+
