--- a/src/components/List/List.sass
+++ b/src/components/List/List.sass
@@ -12,6 +12,9 @@
   border-radius: 5px
   background-color: rgba(0, 0, 0, 0.2)
 
+  @media (max-width: 700px)
+    width: 100%
+
   &::-webkit-scrollbar-track
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3)
     background-color: #F5F5F5
